syntax = "proto3";

package com.road.yishi.proto.pet;

message ChallengeRequestMsg {
  int32 type = 1;
  int32 payType = 2;
}
